# CSE165_Project

./: .gitignore  CSE 165 Project Description Paper .docx  ReadMe.txt
CSE165Project/CSE165/: ALL_BUILD.vcxproj  CMakeCache.txt  CMakeLists.txt  CSE165.sln  CSE165.vcxproj  CSE165.vcxproj.filters  DINO.sln  DINO.vcxproj  DINO.vcxproj.filters  Game.cpp  Game.h  GameObject.cpp  GameObject.h  Main.cpp  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  glad.c
CSE165Project/CSE165/libraries/include/GLFW/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  GLFW.sln  cmake_install.cmake
CSE165Project/CSE165/libraries/include/SOIL2/: CMakeLists.txt  SOIL2.vcxproj  SOIL2.vcxproj.filters  cmake_install.cmake
CSE165Project/CSE165/libraries/include/glad/: ALL_BUILD.vcxproj  (+9 more)
CSE165Project/CSE165/libraries/lib/: glfw3.lib  glm_static.lib  soil2-debug.lib
CSE165Project/CSE165/res/shaders/: background.fs  background.vs  enemy.fs  sprite.frag  sprite.fs  sprite.vs
CSE165Project/CSE165/src/: CMakeLists.txt  Game.cpp  Game.h  GameObject.cpp  GameObject.h  IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h  cmake_install.cmake  src1.vcxproj  src1.vcxproj.filters  src2.vcxproj  src2.vcxproj.filters  src3.vcxproj  src3.vcxproj.filters
CSE165Project/CSE165/x64/Debug/: CSE165.exe.recipe  CSE165.ilk  CSE165.vcxproj.FileListAbsolute.txt  game.obj.enc  vc143.idb
(+13 files in other folders)
